--- a/FE/src/index.css
+++ b/FE/src/index.css
@@ -6,8 +6,36 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html, body {
+  height: 100%;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.root_container_flex{
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  height: 100vw;
+}
+.root_container_left{
+  flex: 16%;
+  box-shadow: 3px 5px 8px 6px #202020;
+}
+.root_container_right{
+  flex: 84%;
+}
+
+@media (max-width: 800px) {
+  .root_container_right, .root_container_left {
+    flex: 100%;
+    box-shadow: 3px 5px 8px 6px #202020;
+  }
+  .root_container_flex{
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
