Added New Changes -UI

--- a/FE/src/pages/Employee/Punch.css
+++ b/FE/src/pages/Employee/Punch.css
@@ -5,4 +5,5 @@
 .glc_punch_login_logout_card{
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px !important;
     padding: 3rem;
+    text-align: center;
 }
